# missing-piece-gen

./: .gitignore  ARCHITECTURE.md  README.md  pyproject.toml
.github/ISSUE_TEMPLATE/: bug_report.md  user_story.md
.github/workflows/: ci.yml
Archive/: analyze.py  debug2.py  debug_hsv.py  main.py  preview_svg.py  pyproject.toml
Archive/__MACOSX/: ._main.py  ._preview_svg.py  ._pyproject.toml
missing_piece_gen/: __init__.py  cli.py  debug_viz.py  edge_analysis.py  errors.py  inference.py  model_gen.py  models.py  pipeline.py  segmentation.py
tests/: test_cli.py  test_edge_analysis.py  test_inference.py  test_model_gen.py  test_segmentation.py
