[build-system]
requires = ["setuptools>=68.0", "setuptools-scm>=8.0"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "missing-piece-gen"
version = "0.1.0"
description = "Generate a 3D model of a missing puzzle piece from surrounding piece geometry"
requires-python = ">=3.10"
dependencies = [
    "build123d>=0.8",
    "trimesh>=4.0",
    "numpy>=1.24",
    "click>=8.0",
    "opencv-python>=4.8",
]

[project.scripts]
missing-piece-gen = "missing_piece_gen.cli:main"

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "ruff>=0.4",
]
